--- a/_notebooks/2022-12-01-unit2-objects-lesson-frq.ipynb
+++ b/_notebooks/2022-12-01-unit2-objects-lesson-frq.ipynb
@@ -80,6 +80,159 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The <mark>this keyword</mark> is the current object in a method or constructor. It is used to invoke the current class, return the current class objet, or pass an argument."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "public class Main {\n",
+    "    int x;\n",
+    "  \n",
+    "    // Constructor with a parameter\n",
+    "    public Main(int x) {\n",
+    "      this.x = x;\n",
+    "    }\n",
+    "  \n",
+    "    // Call the constructor\n",
+    "    public static void main(String[] args) {\n",
+    "      Main myObj = new Main(5);\n",
+    "      System.out.println(\"Value of x = \" + myObj.x);\n",
+    "    }\n",
+    "  }public class Main {\n",
+    "  int x;\n",
+    "\n",
+    "  // Constructor with a parameter\n",
+    "  public Main(int x) {\n",
+    "    this.x = x;\n",
+    "  }\n",
+    "\n",
+    "  // Call the constructor\n",
+    "  public static void main(String[] args) {\n",
+    "    Main myObj = new Main(5);\n",
+    "    System.out.println(\"Value of x = \" + myObj.x);\n",
+    "  }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The <mark>toString()</mark> will represent any object as a string. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "class Student{  \n",
+    "    int rollno;  \n",
+    "    String name;  \n",
+    "    String city;  \n",
+    "     \n",
+    "    Student(int rollno, String name, String city){  \n",
+    "    this.rollno=rollno;  \n",
+    "    this.name=name;  \n",
+    "    this.city=city;  \n",
+    "    }  \n",
+    "     \n",
+    "    public static void main(String args[]){  \n",
+    "      Student s1=new Student(101,\"Raj\",\"lucknow\");  \n",
+    "      Student s2=new Student(102,\"Vijay\",\"ghaziabad\");  \n",
+    "        \n",
+    "      System.out.println(s1);//compiler writes here s1.toString()  \n",
+    "      System.out.println(s2);//compiler writes here s2.toString()  \n",
+    "    }  \n",
+    "   }  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The <mark>equals() method</mark> will return true or false depending on whether two strings are equal."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "true\n",
+      "false\n"
+     ]
+    }
+   ],
+   "source": [
+    "String myStr1 = \"Hello\";\n",
+    "String myStr2 = \"Hello\";\n",
+    "String myStr3 = \"Another String\";\n",
+    "System.out.println(myStr1.equals(myStr2)); // Returns true because they are equal\n",
+    "System.out.println(myStr1.equals(myStr3)); // false"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A <mark>late binding of an object</mark> is when the object is determined when the code is ran."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "class Animal {  \n",
+    "    void eat(){System.out.println(\"animal is eating...\");}  \n",
+    "}  \n",
+    "     \n",
+    "class Dog extends Animal{  \n",
+    "    void eat() {\n",
+    "        System.out.println(\"dog is eating...\");\n",
+    "    }  \n",
+    "public static void main(String args[]) {  \n",
+    "    Animal a=new Dog();  \n",
+    "    a.eat();  \n",
+    "}  \n",
+    "}  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<mark>Polymorphism</mark> is how a class is able to provide different implementations of a method. It allows you to make the same action in different ways.\n",
+    "\n",
+    "<mark>Big O notation</mark> is what the set of all the different algorithms that is able to run at a certain speed.\n",
+    "\n",
     "To combine two different strings, you can use <mark>concatenation</mark> which can combine two or more strings to create one new string."
    ]
   },
