--- a/_notebooks/2022-12-01-unit5-classes.ipynb
+++ b/_notebooks/2022-12-01-unit5-classes.ipynb
@@ -19,7 +19,41 @@
     "When creating java classes, it is important to have a good name for your class. The name of the class should\n",
     "* have words that are relevant to the code\n",
     "* aren't similar to another class name where they might be confused\n",
-    "* not single letter"
+    "* not single letter\n",
+    "\n",
+    "<mark>Static variables or class variables</mark> are in a class and is only initialized once at the beginning of the execution. It belongs to the class, not the object.\n",
+    "\n",
+    "<mark>Main and tester</mark> methods are used hold a collection of code to perform certain tasks. The main will create the code and the tester will actually run the code to test the result.\n",
+    "\n",
+    "A class can be extended with the <mark>extends keyword</mark> which inherits a class from a <mark>superclass</mark>. A <mark>subclass</mark> will be the one that inherits from the superclass.\n",
+    "\n",
+    "<mark>Method overloading</mark> lets a class have more than one method with the same name, but with different parameters. <mark>Overriding</mark> occurs when the subclass has the same method as the superclass."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "An <mark>abstract class</mark> is a class that is restricted so it can't be used to make objects. An <mark>abstract method</mark> can only be in an abstract class and doesn't have a body."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "abstract class Animal {\n",
+    "    public abstract void animalSound();\n",
+    "    public void sleep() {\n",
+    "      System.out.println(\"Zzz\");\n",
+    "    }\n",
+    "    // Animal myObj = new Animal(); will cause an error\n",
+    "  }"
    ]
   },
   {
@@ -38,8 +72,12 @@
    "name": "java"
   },
   "language_info": {
-   "name": "java",
-   "version": "3.8.10"
+   "codemirror_mode": "java",
+   "file_extension": ".jshell",
+   "mimetype": "text/x-java-source",
+   "name": "Java",
+   "pygments_lexer": "java",
+   "version": "11.0.16+8-post-Ubuntu-0ubuntu120.04"
   },
   "orig_nbformat": 4,
   "vscode": {
