--- a/_notebooks/2022-12-01-unit3-if-then.ipynb
+++ b/_notebooks/2022-12-01-unit3-if-then.ipynb
@@ -48,6 +48,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "A <mark>Truth Table</mark> shows all the possible results of a boolean function, whether it's true or false.\n",
     "De Morgan's Law:\n",
     "\n",
     "<mark>De Morgan's Law</mark> states that the \"!\" symbol will negate an And statement and an Or statement. This means that if a condition is written as a || b, !(a || b) would really be a && b. This goes for the other way around where !(a && b) is a || b. It will also cause a true statement to be false with !(true) and vice versa. "
