--- a/_notebooks/2022-12-01-unit6-arrays.ipynb
+++ b/_notebooks/2022-12-01-unit6-arrays.ipynb
@@ -16,6 +16,93 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Arrays can be configured through .add, .get, .set, .sort, .clear, and more methods. \n",
+    "\n",
+    "The .add method adds an index to the array list and the .get calls the specific index number. The .set method sets the index to a new index. The .sort method sorts the indexes in a certain order and .clear will clear all the indexes in the array."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Football, Basketball, Soccer, Baseball, Tennis]\n",
+      " \n",
+      "Football\n",
+      "Basketball\n",
+      "Soccer\n",
+      "Baseball\n",
+      "Tennis\n",
+      " \n",
+      "The size of the array is 5\n",
+      "The 3 array has been changed to Golf\n",
+      " \n",
+      "The array list is in alphabetical order:\n",
+      "Basketball\n",
+      "Football\n",
+      "Golf\n",
+      "Soccer\n",
+      "Tennis\n",
+      " \n",
+      "The array list is now empty and says:[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.ArrayList;\n",
+    "import java.util.Collections;\n",
+    "\n",
+    "public class Main {\n",
+    "    public static void main() {\n",
+    "        ArrayList<String> sports = new ArrayList<String>(); //Creates a new array\n",
+    "        sports.add(\"Football\");\n",
+    "        sports.add(\"Basketball\"); //adds different sports to the array\n",
+    "        sports.add(\"Soccer\");\n",
+    "        sports.add(\"Baseball\");\n",
+    "        sports.add(\"Tennis\");\n",
+    "        System.out.println(sports); // prints the array\n",
+    "\n",
+    "        System.out.println(\" \");\n",
+    "\n",
+    "        for (int i = 0; i < 5; i++) {\n",
+    "            System.out.println(sports.get(i)); // prints each array separately\n",
+    "        }\n",
+    "\n",
+    "        System.out.println(\" \");\n",
+    "        System.out.println(\"The size of the array is \" + sports.size()); //prints the size of the array\n",
+    "\n",
+    "        sports.set(3, \"Golf\"); // changes the 3 array to \"Golf\"\n",
+    "        System.out.println(\"The 3 array has been changed to \" + sports.get(3));\n",
+    "\n",
+    "        System.out.println(\" \");\n",
+    "\n",
+    "        Collections.sort(sports); //sorts the array in alphabetical order\n",
+    "        System.out.println(\"The array list is in alphabetical order:\");\n",
+    "        for (String i : sports) {\n",
+    "            System.out.println(i);\n",
+    "        }\n",
+    "\n",
+    "        System.out.println(\" \");\n",
+    "        sports.clear(); //clears the array\n",
+    "        System.out.println(\"The array list is now empty and says:\" + sports);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Main.main();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Homework\n",
     "[Homework](https://jz21324.github.io/Vcode/jupyter/2022/11/04/blog-learnings-for-tri.html)"
    ]
@@ -28,8 +115,12 @@
    "name": "java"
   },
   "language_info": {
-   "name": "java",
-   "version": "3.8.10"
+   "codemirror_mode": "java",
+   "file_extension": ".jshell",
+   "mimetype": "text/x-java-source",
+   "name": "Java",
+   "pygments_lexer": "java",
+   "version": "11.0.16+8-post-Ubuntu-0ubuntu120.04"
   },
   "orig_nbformat": 4,
   "vscode": {
