--- a/_notebooks/2022-12-01-unit2-objects-lesson-frq.ipynb
+++ b/_notebooks/2022-12-01-unit2-objects-lesson-frq.ipynb
@@ -16,6 +16,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Constructor\n",
+    "\n",
     "After creating an object for a class, a <mark>constructor</mark> is called and can set initial values for the object attributes."
    ]
   },
@@ -48,6 +50,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Accesssors and Mutators\n",
+    "\n",
     "<mark>Accessor</mark> and <mark>mutator</mark> methods can be used to return the value of a private variable and change the value of the variable respectively. "
    ]
   },
@@ -80,6 +84,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# \"This\"\n",
+    "\n",
     "The <mark>this keyword</mark> is the current object in a method or constructor. It is used to invoke the current class, return the current class objet, or pass an argument."
    ]
   },
@@ -164,6 +170,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Standard Methods\n",
+    "\n",
     "The <mark>equals() method</mark> will return true or false depending on whether two strings are equal."
    ]
   },
