--- a/_notebooks/2022-12-01-unit4-iteration.ipynb
+++ b/_notebooks/2022-12-01-unit4-iteration.ipynb
@@ -16,6 +16,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Loops\n",
+    "\n",
     "<mark>For loops</mark> allow a code to be repeated until a certain parameter is no longer true. There is then also <mark>nested loops</mark> where there will be a loop within a loop. And finally, a <mark>while loop</mark> will run through certain code as long as a certain condition is true."
    ]
   },
