--- a/_notebooks/2022-12-01-unit5-classes.ipynb
+++ b/_notebooks/2022-12-01-unit5-classes.ipynb
@@ -16,16 +16,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Class Naming\n",
+    "\n",
     "When creating java classes, it is important to have a good name for your class. The name of the class should\n",
     "* have words that are relevant to the code\n",
     "* aren't similar to another class name where they might be confused\n",
     "* not single letter\n",
     "\n",
+    "# Static variables\n",
+    "\n",
     "<mark>Static variables or class variables</mark> are in a class and is only initialized once at the beginning of the execution. It belongs to the class, not the object.\n",
+    "\n",
+    "# Main and Tester Method\n",
     "\n",
     "<mark>Main and tester</mark> methods are used hold a collection of code to perform certain tasks. The main will create the code and the tester will actually run the code to test the result.\n",
     "\n",
     "A class can be extended with the <mark>extends keyword</mark> which inherits a class from a <mark>superclass</mark>. A <mark>subclass</mark> will be the one that inherits from the superclass.\n",
+    "\n",
+    "# Overloading and Overriding\n",
     "\n",
     "<mark>Method overloading</mark> lets a class have more than one method with the same name, but with different parameters. <mark>Overriding</mark> occurs when the subclass has the same method as the superclass."
    ]
@@ -34,6 +42,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Abstract Class and Method\n",
+    "\n",
     "An <mark>abstract class</mark> is a class that is restricted so it can't be used to make objects. An <mark>abstract method</mark> can only be in an abstract class and doesn't have a body."
    ]
   },
