--- a/_notebooks/2022-12-01-unit6-arrays.ipynb
+++ b/_notebooks/2022-12-01-unit6-arrays.ipynb
@@ -16,7 +16,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Arrays can be configured through .add, .get, .set, .sort, .clear, and more methods. \n",
+    "Arrays can be configured through \n",
+    "* .add \n",
+    "* .get\n",
+    "* .set \n",
+    "* .sort \n",
+    "* .clear \n",
     "\n",
     "The .add method adds an index to the array list and the .get calls the specific index number. The .set method sets the index to a new index. The .sort method sorts the indexes in a certain order and .clear will clear all the indexes in the array."
    ]
