--- a/_notebooks/2022-12-11-recusion-prezi-10-1.ipynb
+++ b/_notebooks/2022-12-11-recusion-prezi-10-1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Topic 10.1 Recursion\n",
+    "# Unit 10 Recursion\n",
     "\n",
     "- toc: true \n",
     "- badges: true\n",
@@ -16,6 +16,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Topic 10.1 Recursion\n",
+    "\n",
     "* A <mark>recursive</mark> method is method that calls itself.\n",
     "* It contains at least one base case that halts recursion and once recursive call\n",
     "* Each recursive call has own local variables\n",
@@ -193,6 +195,67 @@
     "    }\n",
     "}\n",
     "mystery(\"computer\");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Topic 10.2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "index of target: 12\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class recursion{\n",
+    "    public static int recursionBinarySearch(int[] array, int first, int last, int target){\n",
+    "        int midpoint;\n",
+    "\n",
+    "        //if the first number is greater than the last, the target number is not in the list\n",
+    "        if (first > last){\n",
+    "            System.out.println(-1);\n",
+    "            return -1;\n",
+    "        }\n",
+    "        else{\n",
+    "            midpoint = (first+last)/2;\n",
+    "\n",
+    "            //take the upper bound if number is greater than midpoint\n",
+    "            if (array[midpoint] < target){\n",
+    "                return recursionBinarySearch(array, midpoint+1, last, target);\n",
+    "            }\n",
+    "\n",
+    "            // take the lower bound if the number is lesser than midpoint\n",
+    "            if (array[midpoint] > target){\n",
+    "                return recursionBinarySearch(array, first,midpoint-1, target);\n",
+    "            }\n",
+    "        System.out.println(\"index of target: \" + midpoint);\n",
+    "        return midpoint;\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    public static void main(String[] args){\n",
+    "        // test array in main\n",
+    "        int[] test_array = new int[]{ 0,2,4,6,8,10,12,14,16,18,20,22,24,26,28,30,32,34,36,38,40 };\n",
+    "        recursion.recursionBinarySearch(test_array, 0, test_array.length, 24);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "recursion.main(null);"
    ]
   }
  ],
