--- a/_notebooks/2022-12-11-recusion-prezi-10-1.ipynb
+++ b/_notebooks/2022-12-11-recusion-prezi-10-1.ipynb
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {
     "vscode": {
      "languageId": "java"
@@ -201,12 +201,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Topic 10.2"
+    "# Binary Search With Equations\n",
+    "\n",
+    "We start by taking the entire array, starting with the first and the last numbers, and find the midpoint. Starting number is 0, and end is 40, and the midpoint is 20.\n",
+    "\n",
+    "![recursion1](../images/recursion1.png)\n",
+    "\n",
+    "\n",
+    " Since 24 is greater than 20, we take the upper bound of the list, ignoring everything less that 22.The first number now becomes 22.  \n",
+    "\n",
+    "![recursion2](../images/recursion2.png)\n",
+    "\n",
+    "\n",
+    "We identify the midpoint again, which is 30. Since the new midpoint is higher than 24, we now take the lower bound. Here, the last number becomes 28.\n",
+    "\n",
+    "![recursion3](../images/recursion3.png)\n",
+    "\n",
+    "In this new bound, we find the midpoint again, which happens to be 24. So, we have found our target. \n",
+    "\n",
+    "Now, lets say that the target was 23, instead of 24. The program would have to keep going from the midpoint of 24. Since 23 is less than 24, it takes the lower bound. However, this makes first, last and midpoint numbers 22. \n",
+    "\n",
+    "![recursion4](../images/recursion4.png)\n",
+    "\n",
+    "\n",
+    "Again, since 22 is less than 23, the first number becomes 24, and the last number stays 22. This becomes a problem since the first number is greater than the last, which is our base case. This tells the program that the number 23 isn’t in the list, and that it should end.\n",
+    " \n",
+    "![recursion5](../images/recursion5.png)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {
     "vscode": {
      "languageId": "java"
