--- a/_notebooks/2022-12-11-recusion-prezi-10-1.ipynb
+++ b/_notebooks/2022-12-11-recusion-prezi-10-1.ipynb
@@ -16,7 +16,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Topic 10.1 Recursion\n",
+    "# Intro to Recursion\n",
     "\n",
     "* A <mark>recursive</mark> method is method that calls itself.\n",
     "* It contains at least one base case that halts recursion and once recursive call\n",
