final fix hopefully

--- a/_notebooks/2022-12-11-recusion-prezi-10-1.ipynb
+++ b/_notebooks/2022-12-11-recusion-prezi-10-1.ipynb
@@ -286,7 +286,54 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Merge Sort\n",
+    "\n",
+    "- Merge Sort can be used to sort ArrayLists\n",
+    "\n",
+    "- Uses a Divide and Conquer algorithm to Sort ArrayList\n",
+    "   - Divides the array into halves, and then calls itself for the two different halves in order to sort them\n",
+    "   - merges the two sorted halves into one lists\n",
+    "\n",
+    "- Merging Values into One Sorted Array\n",
+    "   - copy the original elements into a temporary array\n",
+    "   - work from left to right in each virtual array to compare element and return them to the correct order in the original array\n",
+    "\n",
+    "Way to Think About It:\n",
+    "mergeSort (myList) {\n",
+    "    mergeSort(left);\n",
+    "    mergeSort(right);\n",
+    "    mergeSort (left & right)\n",
+    "}\n",
+    "\n",
+    "First, the mergeSort function splits the ArrayList into half, and then takes the left side of the list. It then calls mergeSort again and then halves the list, and does this two more times. Eventually, it is left with just 5 after sorting using all of mergeSort(left).\n",
+    "\n",
+    "![merging1](../images/merging1.png)\n",
+    "\n",
+    "Then, it goes back to the third step with just the 5 and 25, and looks at the right side of that one section. It compares the two halves, 5 and 25, and then sorts it, keeping the 5 before the 25 and recurses its way back to the ArrayList in the beginning.\n",
+    "\n",
+    "![merging2](../images/merging2.png)\n",
+    "\n",
+    "We then go back down one more half where we have the 5, 25, 8, and -9. Because we had already sorted the left side of that list, we then go to the right side with the 8 and -9. We then sort the left side where we get 8 and then the right side with -9.\n",
+    "\n",
+    "![merging3](../images/merging3.png)\n",
+    "\n",
+    "After this, the mergeSort() sorts -9 and 8 into the right order, and then recurses it once again 8 and -9 with the sorted -9 and 8 instead.\n",
+    "\n",
+    "![merging4](../images/merging4.png)\n",
+    "\n",
+    "Because the four of the numbers for the left side of the original list were not in the correct order overall, mergeSort is once again called and the list is sorted with the correct order for just the left side, now containing -9, 5, 8, 25.\n",
+    "\n",
+    "![merging5](../images/merging5.png)\n",
+    "\n",
+    "This process is then repeated, but for the right half of the ArrayList. It keeps slitting the list in half, sorting it, and then bringing it to the level below, where eventually, the ArrayList is sorted and merged together, as shown in the image below.\n",
+    "\n",
+    "![merging6](../images/merging6.png)\n",
+    "\n",
+    "This is a code segment that CollegeBoard had provided in order to see the recursion behind mergeSort(). The code calls mergeSort() on itself in order to sort the list and merge the halves until you reach the right order and final list.\n",
+    "\n",
+    "![merging7](../images/merging7.png)"
+   ]
   }
  ],
  "metadata": {
