--- a/_notebooks/2022-12-11-recusion-prezi-10-1.ipynb
+++ b/_notebooks/2022-12-11-recusion-prezi-10-1.ipynb
@@ -334,6 +334,207 @@
     "\n",
     "![merging7](../images/merging7.png)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Recursion Trees\n",
+    "\n",
+    "Recursion trees are a method for visualizing each recursive case (everytime the method is called) until the base case is reached.\n",
+    "\n",
+    "Recursive blocks call themselves. In order for them to finish, there must be some special case in which they don't call themselves. That is the base case, a simpler version of the block's script that doesn't call the block itself.\n",
+    "\n",
+    "There is usually a conditional with two cases: a base case for the lowest level that stops the recursion from going on forever and a recursive case that calls the block itself at lower levels until it reaches the base case.\n",
+    "\n",
+    "Note: If a block keeps recursively calling itself forever, the program is stuck in an infinite loop meaning that there isn't a base case or it is not accessible. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Example of Recursion Tree\n",
+    "\n",
+    "Q: What is the value returned by foo(3)?\n",
+    "\n",
+    "A: Use a recursion tree!\n",
+    "\n",
+    "![merging7](../images/recursionimage.png)\n",
+    "\n",
+    "Since the base case of foo returns 1, we can just add up all the function calls that return the base case."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class example{\n",
+    "    static int foo(int n) {\n",
+    "\n",
+    "        if (n < 0){\n",
+    "            return 1;\n",
+    "        }\n",
+    "        else{\n",
+    "            return foo(n-2) + foo(n-1);\n",
+    "        }\n",
+    "\n",
+    "    }\n",
+    "\n",
+    "    public static void main(String args[]){\n",
+    "        System.out.println(foo(3));\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "example.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Class Activity\n",
+    "If you are on the left side of the class, you will be working with the factorial code. If you are on the right side of the class, you will be working with the fibonacci code. The objective is to work with your crossover team to act out the recursion tree for the code segments below. The first team from each side to show up the correct recursion tree will receive candy!\n",
+    "\n",
+    "TASK: You and your crossover team must physically act out the recursion tree, meaning standing up and each taking a sticky note to represent each branch of the tree.\n",
+    "\n",
+    "If you are on the Fibonacci side: You will be acting out fib(3)\n",
+    "\n",
+    "If you are on the Factorial side: You will be acting out fact(4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Fibonacci Code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3rd Fibonacci Sequence is: 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "// Fibonacci Series using Recursion\n",
+    "class fibonacci {\n",
+    "\tstatic int fib(int n)\n",
+    "\t{\n",
+    "\t\t// Handling base case\n",
+    "\t\t// iIf value of n=1 or n=0, it returns 1\n",
+    "\t\tif (n <= 1)\n",
+    "\t\t\treturn n;\n",
+    "\n",
+    "\t\t// Generic case\n",
+    "        // Otherwise we do n-1 + n-2!\t\n",
+    "\t\treturn fib(n - 1) + fib(n - 2);\n",
+    "\t}\n",
+    "\n",
+    "\tpublic static void main(String args[])\n",
+    "\t{\n",
+    "\t\t// Calling method 1 to compute fibonacci and\n",
+    "        // storing the result into a variable\n",
+    "\t\tint n = 3;\n",
+    "\n",
+    "\t\t// Print and display the fibonacci of number\n",
+    "        // customly passed as an argument\n",
+    "\t\tSystem.out.println(\"3rd Fibonacci Sequence is: \" + fib(n));\n",
+    "\t}\n",
+    "}\n",
+    "\n",
+    "fibonacci.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Factorial Code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Factorial of 4 is: 24\n"
+     ]
+    }
+   ],
+   "source": [
+    "class factorial {\n",
+    " \n",
+    "    static int fact(int n)\n",
+    "    {\n",
+    " \n",
+    "        // Handling base case\n",
+    "        // iIf value of n=1 or n=0, it returns 1\n",
+    "        if (n == 0 || n == 1)\n",
+    "            return 1;\n",
+    " \n",
+    "        // Generic case\n",
+    "        // Otherwise we do n*(n-1)!\n",
+    "        return n * fact(n - 1);\n",
+    "    }\n",
+    " \n",
+    "    // Method 2\n",
+    "    // main driver method\n",
+    "    public static void main(String[] args)\n",
+    "    {\n",
+    " \n",
+    "        // Calling method 1 to compute factorial and\n",
+    "        // storing the result into a variable\n",
+    "        int n = 4;\n",
+    "\n",
+    "        // Print and display the factorial of number\n",
+    "        // customly passed as an argument\n",
+    "        System.out.println(\"Factorial of 4 is: \" + fact(n));\n",
+    "    }\n",
+    "}\n",
+    "factorial.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Homework (MC)\n",
+    "https://docs.google.com/forms/d/e/1FAIpQLSdqAPDDeRqH4wU8soSGx5v-0Iy9kX8h4vnxXMeq5_ErUF5skw/viewform?usp=sf_link"
+   ]
   }
  ],
  "metadata": {
