--- a/_notebooks/2022-12-11-recusion-prezi-10-1.ipynb
+++ b/_notebooks/2022-12-11-recusion-prezi-10-1.ipynb
@@ -18,6 +18,7 @@
    "source": [
     "# Intro to Recursion\n",
     "\n",
+    "* 5-7.5% of the AP Exam, mainly in the multiple choice section\n",
     "* A <mark>recursive</mark> method is method that calls itself.\n",
     "* It contains at least one base case that halts recursion and once recursive call\n",
     "* Each recursive call has own local variables\n",
