--- a/_notebooks/2022-12-11-recusion-prezi-10-1.ipynb
+++ b/_notebooks/2022-12-11-recusion-prezi-10-1.ipynb
@@ -202,7 +202,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Binary Search With Equations\n",
+    "# 10.2 Binary Search With Equations\n",
     "\n",
     "We start by taking the entire array, starting with the first and the last numbers, and find the midpoint. Starting number is 0, and end is 40, and the midpoint is 20.\n",
     "\n",
@@ -288,7 +288,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Merge Sort\n",
+    "# Merge Sort\n",
     "\n",
     "- Merge Sort can be used to sort ArrayLists\n",
     "\n",
