--- a/_notebooks/2022-12-11-recusion-prezi-10-1.ipynb
+++ b/_notebooks/2022-12-11-recusion-prezi-10-1.ipynb
@@ -536,6 +536,14 @@
     "## Homework (MC)\n",
     "https://docs.google.com/forms/d/e/1FAIpQLSdqAPDDeRqH4wU8soSGx5v-0Iy9kX8h4vnxXMeq5_ErUF5skw/viewform?usp=sf_link"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Homework Scores\n",
+    "https://docs.google.com/spreadsheets/d/1ucOgxEYKWkggvw7SJ3TuuPXu0ElscD8unKX-RNxB3No/edit?usp=sharing"
+   ]
   }
  ],
  "metadata": {
