add grades and some hw

--- a/_notebooks/2022-12-09-2D-arrayhw.ipynb
+++ b/_notebooks/2022-12-09-2D-arrayhw.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Unit 6 2D Arrays\n",
+    "# Unit 8 2D Arrays Homework\n",
     "\n",
     "- toc: true \n",
     "- badges: true\n",
@@ -16,7 +16,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <mark>Note:</mark> Extra credit for Kahoot"
+    "# Score: 1.1/1.0"
    ]
   },
   {
