--- a/_notebooks/2022-12-13-inheritance-hw.ipynb
+++ b/_notebooks/2022-12-13-inheritance-hw.ipynb
@@ -16,6 +16,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Score: 0.9/1.0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# World Cup Superclass"
    ]
   },
