--- a/_notebooks/2022-12-14-unit10-recursion.ipynb
+++ b/_notebooks/2022-12-14-unit10-recursion.ipynb
@@ -11,6 +11,13 @@
     "- comments: true\n",
     "- categories: [jupyter]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Homework\n"
+   ]
   }
  ],
  "metadata": {
