--- a/_notebooks/2022-12-14-unit8-2D-array.ipynb
+++ b/_notebooks/2022-12-14-unit8-2D-array.ipynb
@@ -11,6 +11,14 @@
     "- comments: true\n",
     "- categories: [jupyter]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Homework\n",
+    "https://jz21324.github.io/Vcode/jupyter/2022/12/09/2D-arrayhw.html"
+   ]
   }
  ],
  "metadata": {
