--- a/_notebooks/2022-12-14-unit7-arraylist.ipynb
+++ b/_notebooks/2022-12-14-unit7-arraylist.ipynb
@@ -15,7 +15,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Homework\n"
+   ]
   }
  ],
  "metadata": {
