--- a/_notebooks/2022-12-03-array-list-hw.ipynb
+++ b/_notebooks/2022-12-03-array-list-hw.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Unit 7 2D Arrays Homework\n",
+    "# Unit 7 2D Array List Homework\n",
     "\n",
     "- toc: true \n",
     "- badges: true\n",
