--- a/_notebooks/2022-12-03-array-list-hw.ipynb
+++ b/_notebooks/2022-12-03-array-list-hw.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Unit 7 2D Array List Homework\n",
+    "# Unit 7 Array List Homework\n",
     "\n",
     "- toc: true \n",
     "- badges: true\n",
@@ -22,11 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -94,7 +90,7 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "Java",
+   "name": "java",
    "pygments_lexer": "java",
    "version": "11.0.16+8-post-Ubuntu-0ubuntu120.04"
   },
