--- a/_notebooks/2022-12-14-unit8-2D-array.ipynb
+++ b/_notebooks/2022-12-14-unit8-2D-array.ipynb
@@ -16,6 +16,110 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Basics of 2D Arrays\n",
+    "- Multi dimensional\n",
+    "- 7.5-10% of the AP exam\n",
+    "- Compared to a normal array, you have two pairs of brackets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Creation\n",
+    "Make sure to put two pairs of brackets when creating a 2D Array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "int[][] numbers;\n",
+    "String[][] names;\n",
+    "char[][] letters;\n",
+    "float[][] floats;\n",
+    "double[][] doubles;\n",
+    "Object[][] objects;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Initiation\n",
+    "Sets values to each new array with <mark>initiation</mark>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "int[][] numbers1 = {{1,2,3,4},{5,6,7,8},{9,10,11,12},{13,14,15,16}};//method 1:\n",
+    "int[][] numbers2 = new int[4][3]; //method 2: Creates array with four rows and 3 columns \n",
+    "String[][] names1 = {{\"John\",\"James\",\"Jay\"},{\"Melissa\",\"May\",\"Maggie\"},{\"Bob\",\"Burt\",\"Billy\"}}; //method 1\n",
+    "String[][] names2 = new String[2][2]; //method2: Creates array with 2 rows and 2 columns\n",
+    "char[][] letters1 = {{'a','b','c'},{'d','e','f','g','h'}}; //method 1\n",
+    "char[][] letters2 = new char[2][3];"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Iteration Example\n",
+    "Uses <mark>for loop</mark> print alphabet.\n",
+    "Iterates through first array, the row, then the other loop, which is the column "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4 5 6 7 8 9 0 - =  \n",
+      "q w e r t y u i o p [ ] \\  \n",
+      "a s d f g h j k l  \n",
+      "z x c v b n m , . /  \n"
+     ]
+    }
+   ],
+   "source": [
+    "String[][] alphabet = {{\"1\", \"2\", \"3\", \"4\", \"5\", \"6\", \"7\", \"8\", \"9\", \"0\", \"-\", \"=\"},\n",
+    "{\"q\", \"w\", \"e\", \"r\", \"t\", \"y\", \"u\", \"i\", \"o\", \"p\", \"[\", \"]\", \"\\\\\"},\n",
+    "{\"a\", \"s\", \"d\", \"f\", \"g\", \"h\", \"j\", \"k\", \"l\"},\n",
+    "{\"z\", \"x\", \"c\", \"v\", \"b\", \"n\", \"m\", \",\", \".\", \"/\"}};\n",
+    "for(int i = 0;i<alphabet.length;i++){\n",
+    "    for(int j = 0; j < alphabet[i].length;j++){ //nested for loops\n",
+    "        System.out.print(alphabet[i][j]+\" \");\n",
+    "    }\n",
+    "    System.out.println(\" \");\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Homework\n",
     "https://jz21324.github.io/Vcode/jupyter/2022/12/09/2D-arrayhw.html"
    ]
@@ -28,8 +132,12 @@
    "name": "java"
   },
   "language_info": {
-   "name": "java",
-   "version": "3.8.10"
+   "codemirror_mode": "java",
+   "file_extension": ".jshell",
+   "mimetype": "text/x-java-source",
+   "name": "Java",
+   "pygments_lexer": "java",
+   "version": "11.0.16+8-post-Ubuntu-0ubuntu120.04"
   },
   "orig_nbformat": 4,
   "vscode": {
