--- a/_notebooks/2022-12-14-unit7-arraylist.ipynb
+++ b/_notebooks/2022-12-14-unit7-arraylist.ipynb
@@ -18,11 +18,12 @@
    "source": [
     "# Configurations\n",
     "Arrays can be configured through \n",
-    "- .add()\n",
-    "- .get()\n",
-    "- .set ()\n",
-    "- .sort()\n",
-    "- .clear()\n",
+    "\n",
+    "- <mark>.add()\n",
+    "- <mark>.get()\n",
+    "- <mark>.set ()\n",
+    "- <mark>.sort()\n",
+    "- <mark>.clear()</mark>\n",
     "\n",
     "The .add method adds an index to the array list and the .get calls the specific index number. The .set method sets the index to a new index. The .sort method sorts the indexes in a certain order and .clear will clear all the indexes in the array."
    ]
