--- a/_notebooks/2022-12-14-unit10-recursion.ipynb
+++ b/_notebooks/2022-12-14-unit10-recursion.ipynb
@@ -163,9 +163,9 @@
     "\n",
     "<mark>Recursion trees</mark> are a method for visualizing each recursive case (everytime the method is called) until the base case is reached.\n",
     "\n",
-    "Recursive blocks call themselves. In order for them to finish, there must be some special case in which they don't call themselves. That is the base case, a simpler version of the block's script that doesn't call the block itself.\n",
+    "<mark>Recursive blocks</mark> call themselves. In order for them to finish, there must be some special case in which they don't call themselves. That is the base case, a simpler version of the block's script that doesn't call the block itself.\n",
     "\n",
-    "There is usually a conditional with two cases: a base case for the lowest level that stops the recursion from going on forever and a recursive case that calls the block itself at lower levels until it reaches the base case.\n",
+    "There is usually a conditional with two cases: a base case for the lowest level that stops the recursion from going on forever and a <mark>recursive case</mark> that calls the block itself at lower levels until it reaches the base case.\n",
     "\n",
     "Note: If a block keeps recursively calling itself forever, the program is stuck in an infinite loop meaning that there isn't a base case or it is not accessible. "
    ]
