--- a/_notebooks/2022-12-01-unit6-arrays.ipynb
+++ b/_notebooks/2022-12-01-unit6-arrays.ipynb
@@ -16,6 +16,65 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Arrays\n",
+    "- different data structures\n",
+    "- primitive contains single data type\n",
+    "- reference contains multiple data types\n",
+    "- the element is the value in the array\n",
+    "- the index is the position"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "int[] array = new int[10];\n",
+    "int[] array2 = {1, 2, 3, 4, 5};"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Errors\n",
+    "- accessing a value that doesn't not exist because it isn't in the bounds\n",
+    "- when you initialize a single array but not the whole array"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Traverse in Arrays\n",
+    "- accessing the inside of an array\n",
+    "- a loop or iteration can traverse an array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "for (int i = 0; i < array.length; i++) {\n",
+    "    System.out.println(array[i]);\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Arrays can be configured through \n",
     "* .add \n",
     "* .get\n",
@@ -29,7 +88,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -119,7 +182,7 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "java",
+   "name": "Java",
    "pygments_lexer": "java",
    "version": "11.0.16+8-post-Ubuntu-0ubuntu120.04"
   },
