--- a/_notebooks/2022-12-01-unit6-arrays.ipynb
+++ b/_notebooks/2022-12-01-unit6-arrays.ipynb
@@ -18,8 +18,8 @@
    "source": [
     "# Arrays\n",
     "- different data structures\n",
-    "- primitive contains single data type\n",
-    "- reference contains multiple data types\n",
+    "- <mark>primitive</mark> contains single data type\n",
+    "- <mark>reference</mark> contains multiple data types\n",
     "- the element is the value in the array\n",
     "- the index is the position"
    ]
@@ -53,7 +53,7 @@
    "source": [
     "# Traverse in Arrays\n",
     "- accessing the inside of an array\n",
-    "- a loop or iteration can traverse an array"
+    "- a loop or iteration can <maek>traverse</mark> an array"
    ]
   },
   {
