--- a/_notebooks/2023-03-09-hacks-data-types.ipynb
+++ b/_notebooks/2023-03-09-hacks-data-types.ipynb
@@ -13,97 +13,153 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# FRQ Question 1\n",
+    "The FRQ AP CSA 2021 Exam had question 1 asking to create a word guessing game. This involves making the WordMatch class with a secret string. Our job was to create two methods in said class to finish the entire code amount of frq in 2021. "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question 1 part a\n",
+    "The first method we have to create is scoreGuess. This will show what score is returned by seeing the number of times the guess is part of the secret substring. It is then multiplied by the square of the length of the guess."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "public int scoreGuess(String guess)\n",
+    "{\n",
+    "  int count = 0;\n",
+    "\n",
+    "  for(int i = 0; i < secret.length(); i++)\n",
+    "  {\n",
+    "    int j = i + guess.length();\n",
+    "\n",
+    "    if(j <= secret.length() && secret.substring(i, j).equals(guess))\n",
+    "      count++;\n",
+    "  }\n",
+    "\n",
+    "  return count * (guess.length() * guess.length());\n",
+    "}\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question 1 part b\n",
+    "The second method that needs to be created is the findBetterGuess method which will return the better guess between two guesses that are inputted into the method. The guess that has a higher score will be returned."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "public String findBetterGuess(String guess1, String guess2)\n",
+    "{\n",
+    "  int score1 = scoreGuess(guess1);\n",
+    "  int score2 = scoreGuess(guess2);\n",
+    "  \n",
+    "  if(score1 > score2)\n",
+    "    return guess1;\n",
+    "  else if(score2 > score1)\n",
+    "    return guess2;\n",
+    "  else\n",
+    "  {\n",
+    "    if(guess1.compareTo(guess2) > 0)\n",
+    "      return guess1;\n",
+    "    else\n",
+    "      return guess2;\n",
+    "  }\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is the final result of the code as an entire whole."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "isLeapYear: false\n",
-      "firstDayOfYear: 0\n",
-      "dayOfYear: 1\n",
-      "numberOfLeapYears: 0\n",
-      "dayOfWeek: 0\n"
+     "ename": "CompilationException",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m    \u001b[0m\u001b[1m\u001b[30m\u001b[41mgame\u001b[0m\u001b[1m\u001b[30m.scoreGuess(\"ten\");\u001b[0m",
+      "\u001b[1m\u001b[31mcannot find symbol\u001b[0m",
+      "\u001b[1m\u001b[31m  symbol:   variable game\u001b[0m",
+      ""
      ]
     }
    ],
    "source": [
-    "import java.util.HashMap;\n",
+    "public class WordMatch {\n",
+    "    private String secret;\n",
+    "  \n",
+    "    public int scoreGuess (String guess) {\n",
+    "      int count = 0;\n",
     "\n",
-    "public class APCalendar {\n",
+    "      for(int i = 0; i < secret.length(); i++) {\n",
+    "        int j = i + guess.length();\n",
     "\n",
-    "    /** Returns true if year is a leap year and false otherwise.\n",
-    "     * isLeapYear(2019) returns False\n",
-    "     * isLeapYear(2016) returns True\n",
-    "     */          \n",
-    "    private static boolean isLeapYear(int year) {\n",
-    "        // implementation not shown\n",
-    "        if (year % 4 == 0 && !(year % 100 == 0)) {\n",
-    "            return true;    \n",
-    "        }\n",
-    "        else if (year % 400 == 0) {\n",
-    "            return true;\n",
-    "        }\n",
-    "        return false;\n",
-    "        }\n",
+    "        if(j <= secret.length() && secret.substring(i, j).equals(guess))\n",
+    "          count++;\n",
     "        \n",
-    "    /** Returns the value representing the day of the week \n",
-    "     * 0 denotes Sunday, \n",
-    "     * 1 denotes Monday, ..., \n",
-    "     * 6 denotes Saturday. \n",
-    "     * firstDayOfYear(2019) returns 2 for Tuesday.\n",
-    "    */\n",
-    "    private static int firstDayOfYear(int year) {\n",
-    "        // implementation not shown\n",
-    "\n",
-    "        return 0;\n",
     "        }\n",
     "\n",
-    "\n",
-    "    /** Returns n, where month, day, and year specify the nth day of the year.\n",
-    "     * This method accounts for whether year is a leap year. \n",
-    "     * dayOfYear(1, 1, 2019) return 1\n",
-    "     * dayOfYear(3, 1, 2017) returns 60, since 2017 is not a leap year\n",
-    "     * dayOfYear(3, 1, 2016) returns 61, since 2016 is a leap year. \n",
-    "    */ \n",
-    "    private static int dayOfYear(int month, int day, int year) {\n",
-    "        // implementation not shown\n",
-    "        HashMap<String, String> capitalCities = new HashMap<String, String>();\n",
-    "        return 1;\n",
-    "        }\n",
-    "\n",
-    "    /** Returns the number of leap years between year1 and year2, inclusive.\n",
-    "     * Precondition: 0 <= year1 <= year2\n",
-    "    */ \n",
-    "    public static int numberOfLeapYears(int year1, int year2) {\n",
-    "         // to be implemented in part (a)\n",
-    "\n",
-    "        return 0;\n",
-    "        }\n",
-    "\n",
-    "    /** Returns the value representing the day of the week for the given date\n",
-    "     * Precondition: The date represented by month, day, year is a valid date.\n",
-    "    */\n",
-    "    public static int dayOfWeek(int month, int day, int year) { \n",
-    "        // to be implemented in part (b)\n",
-    "        return 0;\n",
-    "        }\n",
-    "\n",
-    "    /** Tester method */\n",
-    "    public static void main(String[] args) {\n",
-    "        // Private access modifiers\n",
-    "        System.out.println(\"isLeapYear: \" + APCalendar.isLeapYear(2022));\n",
-    "        System.out.println(\"firstDayOfYear: \" + APCalendar.firstDayOfYear(2022));\n",
-    "        System.out.println(\"dayOfYear: \" + APCalendar.dayOfYear(1, 1, 2022));\n",
-    "\n",
-    "        // Public access modifiers\n",
-    "        System.out.println(\"numberOfLeapYears: \" + APCalendar.numberOfLeapYears(2000, 2022));\n",
-    "        System.out.println(\"dayOfWeek: \" + APCalendar.dayOfWeek(1, 1, 2022));\n",
+    "      return count * (guess.length() * guess.length());\n",
+    "      }\n",
     "    }\n",
-    "}\n",
-    "APCalendar.main(null);"
+    "    \n",
+    "    public String findBetterGuess(String guess1, String guess2) {\n",
+    "      int score1 = scoreGuess(guess1);\n",
+    "      int score2 = scoreGuess(guess2);\n",
+    "  \n",
+    "      if(score1 > score2)\n",
+    "        return guess1;\n",
+    "      else if(score2 > score1)\n",
+    "        return guess2;\n",
+    "      else\n",
+    "      \n",
+    "      if(guess1.compareTo(guess2) > 0) {\n",
+    "        return guess1;\n",
+    "      }\n",
+    "      else {\n",
+    "        return guess2;\n",
+    "      }\n",
+    "    }\n",
+    "  "
    ]
   }
  ],
@@ -117,7 +173,7 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "java",
+   "name": "Java",
    "pygments_lexer": "java",
    "version": "17.0.6+10-Ubuntu-0ubuntu120.04.1"
   },
